Kubernetes/Prometheus-Stack/Proxmox-Backup-Monitoring/yamls/exporter-pbs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pbs-exporter
  namespace: monitoring
  labels:
    app: pbs-exporter
    app.kubernetes.io/name: pbs-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pbs-exporter
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pbs-exporter
        app.kubernetes.io/name: pbs-exporter
    spec:
      containers:
        - image: ghcr.io/natrontech/pbs-exporter:latest
          name: pbs-exporter
          imagePullPolicy: Always
          user: '65534'
          ports:
           - containerPort: 10019
             name: http
---
apiVersion: v1
kind: Service
metadata:
  name: pbs-exporter
  labels:
    app: pbs-exporter
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 10019
      targetPort: 10019
      protocol: TCP
      name: http
  selector:
    app: pbs-exporter
