Kubernetes/Prometheus-Stack/Proxmox-Backup-Monitoring/yamls/ig-pushgateway.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: monitoring-pushgateway-https-redirect
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: monitoring-pushgateway-security
  namespace: monitoring
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-pushgateway-websecure
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pushgateway.urbaman.it`)
      services:
      - name: prometheus-pushgateway
        port: 9091
        serversTransport: monitoring-pushgateway-transport
      middlewares:
        - name: monitoring-pushgateway-security
  tls:
    secretName: pushgateway-urbaman
    options:
      name: monitoring-pushgateway-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-pushgateway-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`pushgateway.urbaman.it`)
      services:
      - name: prometheus-pushgateway
        port: 9091
      middlewares:
        - name: monitoring-pushgateway-https-redirect
